# results

./: .gitignore  CLAUDE.md  CONTEXT.md  README.md  pyproject.toml
.github/workflows/: ci.yml
decisions/: forbid-some-none.md  issue-4-dedup-result-constructors.md  issue-5-remove-dead-option-errors.md  issue-6-remove-redundant-ne.md  issue-7-seal-option-two-state.md
docs/decisions/: docs-consistency-cleanup.md  issue-13-split-option-module.md  issue-14-result-inspect.md  issue-15-result-and-or.md  issue-16-result-transpose.md  issue-17-option-is-none-or-inspect.md  issue-18-option-and-xor.md  issue-19-option-zip-unzip.md  issue-20-option-flatten.md  issue-21-ok-is-err-and-constant.md  issue-22-err-unwrap-drop-cause.md  issue-4-dedup-result-constructors.md  issue-6-remove-redundant-ne.md  issue-7-seal-option-two-state.md  map-or-argument-order.md  option-is-some-on-abc.md  pythonic-refactor-audit.md  remove-option-some-none.md  result-flatten.md  transpose-raises-on-foreign-payload.md
docs/plans/: 001-option-is-some-on-abc.md  002-add-ci-workflow.md  003-rename-inner-value-to-value.md  004-remove-option-some-none.md  005-result-flatten.md  README.md
prompts/: seal-result-option.md
result/: __init__.py  py.typed  result.py  result.pyi
results/: results.py  results.pyi
src/results/: __init__.py  option.py  results.py
tests/results/: test_factories.py  test_option.py  test_pattern_matching.py  test_public_api.py  test_result.py
tests/unittests/: test_option.py  test_result.py
