[project]
name = "results"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Markus Iorio", email = "mbalzert@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pytest>=8.3.4",
    "ruff>=0.8.6",
]
